# clean_architecture_in_python

./: Makefile  README.md  gen_requirements.sh  pyproject.toml  pytest.ini
api/v1/: root.py
api/v1/routes/: batch.py  order.py
base/: __init__.py  models.py
batch/: __init__.py  models.py
batch/tests/: test_allocate.py  test_models.py  utils.py
config/: __init__.py  base_config.py  config.yaml  postgresql_config.py  sqlalchemy_config.py
core/base/: __init__.py  models.py  orm.py  repo.py
core/batch/: __init__.py  models.py  orm.py  repo.py
core/order/: __init__.py  models.py  orm.py  repo.py
core/utils/: default_factories.py  exceptions.py
order/: __init__.py  models.py
requirements/: dev_requirements.txt  prod_requirements.txt  test_requirements.txt
sync_two_dirs/: main.py
sync_two_dirs/core/base/: dispatchers.py  hashers.py  storages.py
sync_two_dirs/core/system/: dispatchers.py  hashers.py  storages.py
sync_two_dirs/tests/: conftest.py  test_main.py
sync_two_dirs/tests/system/: test_hashers.py  test_storages.py
tests/: __init__.py  conftest.py  utils.py
tests/api/: conftest.py
tests/api/v1/: conftest.py  test_batch.py  test_order.py
tests/batch/: conftest.py  test_allocate.py  test_models.py  test_repo.py  utils.py
tests/factories/: __init__.py  base.py  batch.py  order.py
tests/order/: conftest.py  test_models.py  test_repo.py
utils/: default_factories.py  utils_for_tests.py
