[tool.poetry]
name = "made-com"
version = "0.1.0"
description = "An application for buying furniture."
authors = ["Deyvidas <devidbanyavichyus@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"


[tool.poetry.group.prod.dependencies]
pydantic = "^2.5.3"
sqlalchemy = "^2.0.25"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
autoflake = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
