[tool.poetry]
name = "made-com"
version = "0.1.0"
description = "An application for buying furniture."
authors = ["Deyvidas <devidbanyavichyus@yandex.ru>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-dependency = "^0.6.0"
pytest-order = "^1.2.0"


[tool.poetry.group.prod.dependencies]
pydantic = "^2.5.3"
sqlalchemy = "^2.0.25"
pyyaml = "^6.0.1"
psycopg = {extras = ["binary"], version = "^3.1.17"}
sqlalchemy-utils = "^0.41.1"
fastapi = {extras = ["all"], version = "^0.109.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
autoflake = "^2.2.1"
types-pyyaml = "^6.0.12.12"
mypy = "^1.8.0"
types-sqlalchemy-utils = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
